Prevent modals from becoming too wide
fixes #442

--- a/client/styles/importer.less
+++ b/client/styles/importer.less
@@ -137,6 +137,9 @@ md-divider {
 
 @media (min-width: 370px) {
   md-dialog {
+    min-width: 360px;
+  }
+  md-dialog.wide-modal {
     min-width: 90%;
   }
 }
